Bug 563918 - API WidgetValueProperty differ to SWT
Adapt RAP interfaces and subclasses changed in SWT to use generics to
fix code base differences in common code base.

Change-Id: I54f9d0c28fca712bd434789412157f7770810dc9
Signed-off-by: Daniel Gomez-Sanchez <daniel.gomez-sanchez@allianz.at>